# anti-shadowsocksR

./: CMakeLists.txt  README  main  main.cpp
libpcap-1.10.1/: config.guess  config.status  config.sub  configure  libpcap.so.1.10.1  pcap-dlpi.c
libpcap-1.10.1/msdos/: bin2c.c  pkt_rx1.s
libpcap-1.10.1/testprogs/: visopts.py
src/: OneWay.h  base64.h  confusion.h  heard.h  ip_tcp.h  main.h  protocol.h
ssr-file/aes128_md5/: test.pcap
ssr-file/aes128_sha1/: test.pcap
ssr-file/chain_a/: test.pcap
ssr-file/chain_b/: test.pcap
ssr-file/chain_c/: test.pcap
ssr-file/chain_d/: test.pcap
ssr-file/chain_e/: test.pcap
ssr-file/chain_f/: test.pcap
ssr-file/origin/: test.pcap
ssr-file/sha1_v4/: test.pcap
ssr-file/verify_deflate/: test.pcap
zlib-1.2.11/: adler32.lo  compress.lo  crc32.lo  deflate.lo  example  example64  examplesh  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.11  minigzip  minigzip64  minigzipsh  trees.lo  uncompr.lo  zutil.lo
